--- a/css/global.css
+++ b/css/global.css
@@ -6,21 +6,28 @@
   list-style: none;
 }
 
+:root {
+  --font-family: "Montserrat", sans-serif;
+  --second-family: "Inter", sans-serif;
+  --third-family: "Cunia", sans-serif;
+}
+
 .header {
   padding: 20px 0;
   width: 100%;
   height: 150px;
-  box-shadow: 10px 1px 20px black;
+  box-shadow: 0 15px 20px 0 rgba(0, 0, 0, 0.25);
+  background: var(--white);
 }
 
 .container {
   margin: 0 auto;
-  max-width: calc(1400px + 32px);
+  max-width: calc(1200px + 32px);
 }
 
 .header-elements {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -30,13 +37,17 @@
   align-items: center;
   gap: 17px;
 }
-.logo-text > h2{
-    color: black;
+.logo-text {
+  background: url(/images/logo-text.svg);
+  width: 148px;
+  height: 67px;
 }
-.logo-text >span{
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: 900;
-    color: #0009ff;
+
+.company {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 24px;
+  color: var(--black);
 }
 
 .hed-phone {
@@ -50,43 +61,49 @@
   display: flex;
   flex-direction: column;
 }
-
+.ph-number > a {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 24px;
+  color: #000;
+}
 
 .btn {
-    position: relative;
-    font-size: 20px;
-    color: #5209fb;
-    border: 2px solid #0921fb;
-    border-radius: 50px;
-    background: transparent;
-    margin: 0 20px;
-    padding: 20px 50px;
-    text-decoration: none;
-    font-weight: bolder;
-    transition: 0.4s all ease-in-out 0s;
-    overflow: hidden;
+  position: relative;
+  font-family: var(--font-family);
+  font-weight: 200;
+  font-size: 24px;
+  border-radius: 60px;
+  border: 1px solid;
+  background: transparent;
+  padding: 20px 23px;
+  margin-inline: 15px;
+  text-decoration: none;
+  transition: 0.4s all ease-in-out 0s;
+  overflow: hidden;
+  color: #0384d8;
 }
-.btn::before{
-    content: "";
-    position: absolute;
-    background-color: #0009ff;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    border-radius: 50px;
-    transition: 0.4s all ease-in-out 0s;
+.btn::before {
+  content: "";
+  position: absolute;
+  background: linear-gradient(225deg, #17bff0 0%, #00317d 100%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  border-radius: 60px;
+  transition: 0.4s all ease-in-out 0s;
 }
-.btn-1::before{
-    left: unset;
-    right: 0;
-    width: 0;
+.btn-1::before {
+  left: unset;
+  right: 0;
+  width: 0;
 }
-.btn-1:hover::before{
-    left: 0;
-    right: unset;
-    width: 100%;
+.btn-1:hover::before {
+  left: 0;
+  right: unset;
+  width: 100%;
 }
 .btn:hover {
   color: white;
@@ -100,11 +117,88 @@
   transition: color 0.3s;
 }
 
-
-
 .btn2 {
-  padding: 20px 50px;
-  border: 2px solid blue;
+  position: relative;
   border-radius: 50px;
+  padding: 21px 20px;
+  width: 100px;
+  height: 72px;
+  border: 1px solid;
   background: transparent;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 24px;
+  overflow: hidden;
+  color: #0384d8;
+  cursor: pointer;
+  transition: 0.4s all ease-in-out 0s;
+}
+.btn2:hover {
+  color: white;
+}
+.btn2::before {
+  content: "";
+  position: absolute;
+  background: linear-gradient(225deg, #17bff0 0%, #00317d 100%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  border-radius: 60px;
+  transition: 0.4s all ease-in-out 0s;
+}
+.btn2::before {
+  left: unset;
+  right: 0;
+  width: 0;
+}
+.btn2:hover::before {
+  left: 0;
+  right: unset;
+  width: 100%;
+}
+
+.main {
+  margin-top: 210px;
+  height: 100vh;
+  width: 100%;
+}
+
+.work-with {
+  display: flex;
+  align-items: center;
+
+  gap: 10px;
+}
+.line {
+  border-radius: 2px;
+  width: 50px;
+  height: 4px;
+  background: linear-gradient(225deg, #17bff0 0%, #00317d 100%);
+}
+
+.work-with > p {
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 32px;
+}
+
+.work-with > p > span {
+  color: #0384d8;
+}
+
+.inovate-text > h1 {
+  margin-top: 20px;
+  font-family: var(--third-family);
+  font-weight: 700;
+  font-size: 60px;
+  color: #000;
+}
+
+.inovate-text > h1 > span {
+  font-family: var(--third-family);
+  font-weight: 700;
+  font-size: 60px;
+  color: #0384d8;
 }
