--- a/css/global.css
+++ b/css/global.css
@@ -161,7 +161,6 @@
 
 .main {
   margin-top: 210px;
-  height: 100vh;
   width: 100%;
 }
 
@@ -201,4 +200,88 @@
   font-weight: 700;
   font-size: 60px;
   color: #0384d8;
+}
+
+.inovate-text > p {
+  font-weight: 400;
+  font-size: 24px;
+  font-family: var(--font-family);
+  color: #555;
+  width: 738px;
+  text-align: left;
+  margin-top: 32px;
+}
+
+.inovate-elements {
+  margin-top: 32px;
+  gap: 50px;
+  display: flex;
+  flex-direction: row;
+}
+
+.work-together {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  position: relative;
+  font-family: var(--font-family);
+  font-weight: 200;
+  font-size: 24px;
+  border-radius: 60px;
+  border: 1px solid;
+  background: linear-gradient(
+    225deg,
+    #17bff0 0%,
+    #00317d 100%
+  ); /* Set initial background */
+  padding: 20px 23px;
+  text-decoration: none;
+  transition: 0.5s all ease-in-out;
+  overflow: hidden;
+  color: white;
+}
+
+.work-together:hover {
+  transform: translateY();
+  background: transparent;
+  color: #0384d8; /* Change text color on hover */
+}
+
+.work-together:hover .bxs-plus-circle {
+  color: #0384d8; /* Change color of .bxs-plus-circle on hover */
+}
+
+.work-together .bxs-plus-circle {
+  font-size: 48px;
+  vertical-align: middle;
+}
+
+.call-evr {
+  position: relative;
+  display: flex;
+  gap: 20px;
+  flex-direction: row;
+  align-items: center;
+}
+
+.call-icon {
+  padding: 20px 23px;
+  border-radius: 60px;
+  border: 2px solid #0384d8;
+}
+.call-evr > span {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  text-align: left;
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 32px;
+  color: #000;
+}
+
+.call {
+  font-weight: 400;
+  font-size: 24px;
+  color: #000;
 }
