--- a/sass/style.scss
+++ b/sass/style.scss
@@ -29,8 +29,10 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
   & > img {
     margin-top: -400px;
+    z-index: -1;
   }
 }
 
