--- a/sass/style.scss
+++ b/sass/style.scss
@@ -41,7 +41,7 @@ body {
 
 .wave {
   position: absolute;
-  top: 400px;
+  top: 50%;
   z-index: -1;
 }
 
@@ -65,6 +65,10 @@ header {
     display: flex;
     align-items: center;
     gap: 20px;
+    & > img {
+      width: 105px;
+      height: 110px;
+    }
   }
   &__btn {
     position: relative;
@@ -233,6 +237,10 @@ header {
   justify-content: space-between;
   display: flex;
   flex-direction: row;
+  & > img {
+    height: 600px;
+    width: 600px;
+  }
   &__text {
     display: flex;
     flex-direction: column;
@@ -303,6 +311,10 @@ header {
     justify-content: center;
     position: absolute;
     z-index: -1;
+    & > img {
+      width: 908px;
+      height: 905px;
+    }
   }
   & > h2 {
     font-size: 64px;
@@ -442,7 +454,6 @@ header {
   color: $black;
 }
 
-/* Style for file input button */
 .file-input-button {
   display: inline-block;
   padding: 15px 20px;
@@ -453,12 +464,10 @@ header {
   cursor: pointer;
 }
 
-/* Style for file input */
 .file-input {
   display: none;
 }
 
-/* Style for file input label */
 .file-input-label {
   display: block;
   margin-top: 10px;
@@ -536,6 +545,136 @@ footer {
 
 @media (max-width: 1720px) {
   .container {
-    max-width: 1400px;
+    max-width: 1200px;
   }
+  .wave {
+    top: 60%;
+  }
+  .what-v-do2 {
+    justify-content: center;
+    & > img {
+      height: 500px;
+      width: 500px;
+    }
+    &__text {
+      gap: 20px;
+      width: 60%;
+      & > h2 {
+        font-size: 64px;
+        font-weight: 600;
+      }
+      & > h3 {
+        font-size: 32px;
+        font-weight: 400;
+      }
+      & > p {
+        font-size: 24px;
+        font-weight: 400;
+        width: 90%;
+      }
+    }
+  }
+  .list-dude {
+    width: 600px;
+    height: 639px;
+  }
+
+  .our-mission {
+    &__back {
+      display: flex;
+      width: 100%;
+      align-items: center;
+      justify-content: center;
+      & > img {
+        width: 838px;
+        height: 885px;
+      }
+    }
+    & > h2 {
+      font-size: 45px * 0.8;
+      font-weight: 500;
+    }
+    & > p {
+      font-size: 30px * 0.8;
+      font-weight: 500;
+    }
+    &__card-box {
+      justify-content: center;
+      gap: 20px;
+      & > div {
+        width: 500px;
+        height: 220px;
+        & > span {
+          padding: 15px 10px;
+          & > h3 {
+            font-size: 32px * 0.8;
+            font-weight: 400;
+          }
+          & > p {
+            font-size: 24px * 0.8;
+            font-weight: 400;
+          }
+        }
+      }
+    }
+  }
+
+  .lets-get {
+    margin-top: 315px;
+    & > h2 {
+      font-size: 40px;
+    }
+    & > p {
+      font-size: 32px * 0.8;
+      font-weight: 400;
+    }
+    &__buttons {
+      margin-top: 50px;
+      & > button {
+        font-size: 32px * 0.8;
+        font-weight: 500;
+      }
+    }
+  }
+
+  .lets-get {
+    &__labels {
+      font-size: 32px * 0.8;
+    }
+    &__labels2 {
+      font-size: 32px * 0.8;
+    }
+    &__labels3 {
+      font-size: 32px * 0.8;
+      & > p {
+        font-size: 16px * 0.8;
+      }
+    }
+  }
+
+  .footer {
+    top: -50px;
+  }
+}
+
+@media (max-width: 1400) {
+}
+
+@media (max-width: 1200px) {
+}
+
+// For devices with a maximum width of 992px
+@media (max-width: 992px) {
+}
+
+// For devices with a maximum width of 768px
+@media (max-width: 768px) {
+}
+
+// For devices with a maximum width of 576px
+@media (max-width: 576px) {
+}
+
+// For devices with a maximum width of 480px
+@media (max-width: 480px) {
 }
