--- a/css/style.css
+++ b/css/style.css
@@ -543,14 +543,91 @@ footer {
   color: #ffffff;
 }
 
+@media (max-width: 1880px) {
+  .what-v-do2 {
+    padding-top: 480px;
+  }
+  .what-v-do2_elements {
+    padding-top: 50px;
+    gap: 50px;
+  }
+  .what-v-do2__text {
+    gap: 20px;
+  }
+}
 @media (max-width: 1720px) {
   .container {
     max-width: 1300px;
+  }
+  .what-v-do2_elements {
+    padding-top: 60px;
+    gap: 40px;
+  }
+  .what-v-do2_elements > img {
+    width: 330px;
+    height: 434px;
+  }
+  .what-v-do2__text {
+    gap: 20px;
+  }
+  footer {
+    margin-top: -200px;
   }
 }
 @media (max-width: 1470px) {
   .container {
     max-width: 1140px;
+  }
+  .what-v-do2__text > h2 {
+    font-size: 51px;
+  }
+  .what-v-do2__text > h3 {
+    font-size: 32px;
+  }
+  .what-v-do2__text > p {
+    font-size: 24px;
+  }
+  .what-v-do2_elements > img {
+    width: 264px;
+    height: 347px;
+  }
+  .list-dude {
+    width: 560px;
+    height: 591px;
+  }
+  .fast-way {
+    gap: 50px;
+    margin-top: -300px;
+  }
+  .our-mission__card-box > div {
+    width: 504px;
+    height: 315px;
+  }
+  footer {
+    margin-top: -150px;
+  }
+}
+@media (max-width: 1400px) {
+  .what-v-do2 {
+    padding-top: 480px;
+  }
+  .fast-way__text > h2 {
+    font-size: 51px;
+  }
+  .our-mission > h2 {
+    font-size: 51px;
+  }
+  .our-mission > p {
+    font-size: 32px;
+  }
+  .lets-get > h2 {
+    font-size: 51px;
+  }
+  .lets-get > p {
+    font-size: 32px;
+  }
+  .footer {
+    margin-top: 150px;
   }
 }
 @media (max-width: 1199px) {
