--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,8 @@
+@import "./create-account";
+@import "./business-info";
+@import "./seller-edit";
+@import "./adding-product";
+
 $darkblue: #00317d;
 $skyblue: #0384d8;
 $oceanblue: #17bff0;
@@ -40,95 +45,6 @@ body {
 .container {
   max-width: 1420px;
   margin: auto;
-}
-
-header {
-  box-shadow: 0 5px 20px $black;
-}
-
-.header-elem {
-  width: 100%;
-  height: 150px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  &__logo {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    & > img {
-      width: 105px;
-      height: 110px;
-    }
-  }
-  &__btn {
-    position: relative;
-    align-items: center;
-    padding: 20px 22px;
-    border-radius: 60px;
-    border: 2px solid $darkblue;
-    font-size: 24px;
-    font-weight: 400;
-    font-family: $font-family;
-    color: $darkblue;
-    background: transparent;
-    overflow: hidden;
-    transition: background-color 0.3s, color 0.3s;
-  }
-  &__btn:hover {
-    color: white;
-  }
-  &__btn::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    left: unset;
-    right: 0;
-    border-radius: 60px;
-    width: 0%;
-    height: 100%;
-    z-index: -1;
-    background: linear-gradient(225deg, #17bff0 0%, #00317d 100%);
-    transition: 0.4s all ease-in-out 0s;
-  }
-
-  &__btn:hover::before {
-    left: 0;
-    right: unset;
-    width: 100%;
-  }
-  &__btn:hover .bx {
-    transition: color 0.3s;
-  }
-}
-
-.company {
-  font-size: 24px;
-  color: $black;
-  font-weight: 400;
-  font-family: $font-family;
-}
-
-.phone-box {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  &__icon {
-    height: 48px;
-    width: 48px;
-  }
-  &__numbers {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
-  &__numbers > a {
-    font-size: 24px;
-    color: #000;
-    font-family: $font-family;
-  }
 }
 
 .what-v-do {
@@ -270,7 +186,7 @@ header {
   display: flex;
   flex-direction: row;
   position: relative;
-  height: 160vh;
+  height: 190vh;
 }
 
 .wave-back::before {
@@ -289,7 +205,7 @@ header {
   display: flex;
   gap: 20px;
   flex-direction: row-reverse;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   &__text {
     display: flex;
@@ -355,6 +271,7 @@ header {
     & > div {
       background: $white;
       display: flex;
+      overflow: hidden;
       flex-direction: row;
       align-items: start;
       box-shadow: 0 0 5px $lightblack;
@@ -424,6 +341,7 @@ header {
   &__inputs-box {
     display: grid;
     grid-template-columns: 500px 500px;
+    align-items: flex-end;
     margin-top: 85px;
     width: 90%;
     & > div {
@@ -466,7 +384,7 @@ header {
   position: relative;
   width: 413px;
   margin-top: 30px;
-  font-size: 24px;
+  font-size: 25px;
   font-weight: 500;
   font-family: $font-family;
   color: $black;
@@ -474,11 +392,12 @@ header {
 
 .file-input-button {
   display: inline-block;
-  padding: 15px 20px;
+  padding: 5px 20px;
   background-color: #ffffff;
-  color: #000000;
+  color: #555555;
   border: 2px solid $darkblue;
   border-radius: 5px;
+  font-size: 24px;
   cursor: pointer;
 }
 
@@ -492,83 +411,18 @@ header {
   font-size: 16px;
 }
 
-footer {
-  position: relative;
-  overflow: hidden;
-  margin-top: -300px;
-  display: flex;
-  align-items: end;
-  z-index: -1;
-  justify-content: center;
-  height: 869px;
-  width: 100%;
-}
-.footer {
-  position: absolute;
-  top: -100px;
-}
-
-.footer-elements {
-  padding-top: 500px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex-wrap: wrap;
-  z-index: 1;
-  & > div {
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    z-index: 1;
-    & > span {
-      justify-content: center;
-      display: flex;
-      width: 413px;
-      padding-left: 20px;
-      flex-direction: column;
-      gap: 15px;
-      & > h3 {
-        font-size: 40px;
-        font-weight: 500;
-        font-family: $font-family;
-        color: $white;
-      }
-      & > a {
-        font-family: $font-family;
-        color: $white;
-        font-size: 24px;
-        font-weight: 400;
-      }
-    }
-    & > a {
-      align-items: center;
-      display: flex;
-      z-index: 1;
-      gap: 23px;
-      padding-inline: 43px;
-      border-right: 2px solid $white;
-    }
-  }
-  & > h5 {
-    padding-top: 30px;
-    text-align: center;
-    z-index: 1;
-    font-weight: 400;
-    font-size: 24px;
-    font-family: $font-family;
-    color: $white;
-  }
-}
-
 //----------------MEDIA--------------//
 
 @media (max-width: 1880px) {
   .what-v-do2 {
-    padding-top: 480px;
+    padding-top: 300px;
     &_elements {
       padding-top: 50px;
+      align-items: center;
+      justify-content: space-between;
       gap: 50px;
     }
+
     &__text {
       gap: 20px;
     }
@@ -581,7 +435,7 @@ footer {
   .what-v-do2 {
     &_elements {
       padding-top: 60px;
-      gap: 40px;
+      gap: 20px;
       & > img {
         width: 330px;
         height: 434px;
@@ -595,6 +449,16 @@ footer {
 
   footer {
     margin-top: -200px;
+  }
+}
+
+@media (max-width: 1600px) {
+  .what-v-do2 {
+    padding-top: 400px;
+  }
+  .fast-way {
+    gap: 50px;
+    margin-top: -300px;
   }
 }
 
@@ -614,6 +478,7 @@ footer {
       font-size: 24px;
     }
   }
+
   .what-v-do2_elements > img {
     width: 264px;
     height: 347px;
@@ -622,11 +487,6 @@ footer {
   .list-dude {
     width: 560px;
     height: 591px;
-  }
-
-  .fast-way {
-    gap: 50px;
-    margin-top: -300px;
   }
 
   .our-mission__card-box > div {
@@ -641,7 +501,7 @@ footer {
 
 @media (max-width: 1400px) {
   .what-v-do2 {
-    padding-top: 450px;
+    padding-top: 460px;
   }
 
   .wave-back {
@@ -669,17 +529,30 @@ footer {
       font-size: 32px;
     }
     &__inputs-box {
-      align-items: flex-end;
       grid-template-columns: 450px 500px;
     }
   }
 }
-// For devices with a maximum width of 992px
-@media (max-width: 1220px) {
-  .container {
-    max-width: 960px;
+
+@media (max-width: 1370px) {
+  .what-v-do2_elements {
+    align-items: center;
+    padding-right: 105px;
+  }
+  .what-v-do2__text {
+    & > h3 {
+      font-size: 24px;
+    }
+    & > p {
+      font-size: 19px;
+      width: 100%;
+    }
   }
 
+  .wave-back {
+    height: 210vh;
+    margin-top: -100px;
+  }
   .header-elem {
     height: 130px;
     &__logo > img {
@@ -723,21 +596,6 @@ footer {
     }
     & > p {
       font-size: 19px;
-    }
-  }
-
-  .what-v-do2_elements {
-    justify-content: space-between;
-    align-items: center;
-  }
-  .what-v-do2__text {
-    width: 70%;
-    & > h3 {
-      font-size: 24px;
-    }
-    & > p {
-      font-size: 19px;
-      width: 100%;
     }
   }
 
@@ -795,16 +653,59 @@ footer {
     height: 47px;
   }
 
-  .footer-elements {
-    padding-top: 300px;
-    & > div > a > img {
-      // width: 202px * 0.8;
-      // height: 93px * 0.8;
+  .footer-elements > h5 {
+    font-size: 24px;
+  }
+
+  .footer-elements > div > span {
+    & > h3 {
+      font-size: 24px;
     }
+    & > a {
+      font-size: 19px;
+    }
+  }
+  .footer-elements > div {
+    & > a > img {
+      width: 100%;
+      height: 110px * 0.8;
+    }
+  }
+  .footer {
+    padding-top: 100px;
   }
 }
 
-@media (max-width: 1199px) {
+// For devices with a maximum width of 992px
+@media (max-width: 1220px) {
+  .container {
+    max-width: 990px;
+  }
+  .what-v-do2__text {
+    & > h3 {
+      font-size: 24px * 0.8;
+    }
+    & > p {
+      font-size: 19px * 0.8;
+      width: 100%;
+    }
+  }
+
+  .what-v-do2_elements > img {
+    width: 211px;
+    height: 277px;
+  }
+
+  .footer-elements > div {
+    margin-left: 100px;
+  }
+
+  .footer {
+    padding-top: 200px;
+  }
+}
+
+@media (max-width: 1024px) {
   .container {
     max-width: 960px;
   }
